[package]
name = "hash"
version = "0.1.0"
description = "Hash primitive used in `openstark`"
repository = "https://github.com/0xProject/starkcrypto/tree/master/crypto/hash"
keywords = ["hash", "no-std"]
categories = ["cryptography", "algorithms", "no-std", "wasm"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
macros-decl = { path = "../../utils/macros-decl", default-features = false }
u256 = { path = "../../algebra/u256", default-features = false }
primefield = { path = "../../algebra/primefield", default-features = false }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
tiny-keccak = "1.5.0"
quickcheck = { version = "0.8", optional = true }
hex = { version = "0.3.2", optional = true }

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }
quickcheck_macros = { version = "0.8", optional = true }

[features]
default = [ "std" ]
std = [
    "macros-decl/std",
    "u256/std",
    "primefield/std",
    "no-std-compat/std",
    "hex"
]
test = [
    "quickcheck",
    "quickcheck_macros",
]
