[package]
name = "zkp-hash"
version = "0.2.0"
description = "Hash primitive used in `zkp-stark`"
repository = "https://github.com/0xProject/starkcrypto/tree/master/crypto/hash"
keywords = ["hash", "no-std"]
categories = ["cryptography", "algorithms", "no-std", "wasm"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hex = { version = "0.4.0", optional = true }
no-std-compat = { version = "0.4.0", features = [ "alloc" ] }
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
zkp-macros-decl = { version = "0.2.0", path = "../../utils/macros-decl", default-features = false }
zkp-primefield = { version = "0.2.0", path = "../../algebra/primefield", default-features = false }
zkp-u256 = { version = "0.2.0", path = "../../algebra/u256", default-features = false }

[dev-dependencies]
criterion = "0.3.0"

[features]
default = [ "std" ]
std = [
    "hex",
    "no-std-compat/std",
    "zkp-macros-decl/std",
    "zkp-primefield/std",
    "zkp-u256/std",
]

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
