[package]
name = "merkle-tree"
version = "0.1.0"
description = ""
repository = "https://github.com/0xProject/starkcrypto/tree/master/crypto/merkle-tree"
keywords = []
categories = []
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
license-file = "../../License.md"
edition = "2018"

[dependencies]
macros-decl = { path = "../../utils/macros-decl", optional = true, default_features = false }
error-utils = { path = "../../utils/error-utils", default_features = false }
mmap-vec = { path = "../../utils/mmap-vec", default_features = false, optional = true }
hash = { path = "../hash", default_features = false }
# TODO: Remove:
u256 = { path = "../../algebra/u256", optional = true }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
itertools = { version = "0.8.0", default_features = false }
crunchy = { version = "0.2.2", default_features = false }
hex = { version = "", optional = true }
quickcheck = { version = "0.8", optional = true }
rayon = { version = "1.0.3", optional = true }

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }
criterion-utils = { path = "../../utils/criterion-utils", optional = true }
quickcheck_macros = {version = "0.8", optional = true }
lazy_static = { version = "1.3.0", optional = true }

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = ["std", "prover"] # Default to using the std
std = [
    "error-utils/std",
    "mmap-vec/std",
    "hash/std",
    "no-std-compat/std",
    "itertools/use_std",
    "crunchy/std",
    "rayon",
    "hex",
]
bench = [
    "test",
    "criterion",
    "criterion-utils",
    "lazy_static",
]
test = [
    "u256/test",
    "macros-decl",
    "std",
    "quickcheck",
    "quickcheck_macros",
]
prover = [
    "std",
    "mmap-vec",
]
