[package]
name = "zkp-merkle-tree"
version = "0.2.0"
description = "Merkle tree based vector commitment"
repository = "https://github.com/0xProject/starkcrypto/tree/master/crypto/merkle-tree"
keywords = ["merkle-tree", "hash", "no-std"]
categories = ["cryptography", "algorithms", "no-std", "wasm"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
crunchy = { version = "0.2.2", default_features = false }
hex = { version = "0.4.0", optional = true }
itertools = { version = "0.9.0", default_features = false }
log = { version = "0.4.8", default_features = false }
no-std-compat = { version = "0.4.0", features = [ "alloc" ] }
rayon = { version = "1.0.3", optional = true }
zkp-error-utils = { version = "0.2.0", path = "../../utils/error-utils", default_features = false }
zkp-hash = { version = "0.2.0", path = "../hash", default_features = false }
zkp-mmap-vec = { version = "0.2.0", path = "../../utils/mmap-vec", default_features = false, optional = true }

[dev-dependencies]
criterion = "0.3.0"
lazy_static = "1.3.0"
proptest = "0.9.5"
proptest-derive = "0.1.2"
zkp-criterion-utils = { version = "0.2.0", path = "../../utils/criterion-utils" }
zkp-macros-decl = { version = "0.2.0", path = "../../utils/macros-decl" }
zkp-u256 = { version = "0.2.0", path = "../../algebra/u256", features = ["proptest", "proptest-derive"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std", "prover"] # Default to using the std
std = [
    "crunchy/std",
    "hex",
    "itertools/use_std",
    "log/std",
    "no-std-compat/std",
    "rayon",
    "zkp-error-utils/std",
    "zkp-hash/std",
    "zkp-mmap-vec/std",
]
prover = [
    "std",
    "zkp-mmap-vec",
]

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
