[package]
name = "openstark"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
macros-decl = { path = "../../utils/macros-decl", default-features = false }
mmap-vec = { path = "../../utils/mmap-vec", default-features = false }
logging-allocator = { path = "../../utils/logging-allocator", optional = true }
u256 = { path = "../../algebra/u256", default-features = false }
primefield = { path = "../../algebra/primefield", default-features = false }
hash = { path = "../../crypto/hash", default-features = false }
merkle-tree = { path = "../../crypto/merkle-tree", default-features = false }

# TODO: Remove these
elliptic-curve = { path = "../../algebra/elliptic-curve", default-features = false }
elliptic-curve-crypto = { path = "../../crypto/elliptic-curve-crypto", default-features = false }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
itertools = { version = "0.8.0", default_features = false }
lazy_static = { version = "1.3.0", features = [ "spin_no_std" ] } # TODO: When `std` is set we want this feature off!
tiny-keccak = "1.5.0"
rayon = { version = "1.0.3", optional = true }
quickcheck = { version = "0.8", optional = true }
# TODO: Switch to slog
log = { version = "0.4.8", default_features = false }
env_logger = { version = "0.6.2", optional = true }

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }
criterion-utils = { path = "../../utils/criterion-utils", optional = true }
quickcheck_macros = { version = "0.8", optional = true }
hex = { version = "0.3.2", optional = true }

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = [ "std", "prover", "examples" ]
std = [
    "macros-decl/std",
    "mmap-vec/std",
    "u256/std",
    "primefield/std",
    "elliptic-curve/std",
    "elliptic-curve-crypto/std",
    "hash/std",
    "merkle-tree/std",
    "starkdex/std",
    "no-std-compat/std",
    "itertools/use_std",
    "log/std",
    "rayon",
    "hex",
]
test = [
    "u256/test",
    "primefield/test",
    "elliptic-curve/test",
    "elliptic-curve-crypto/test",
    "starkdex/test",
    "quickcheck",
    "quickcheck_macros",
    "hex",
    "env_logger",
]
bench = [
    "criterion",
    "criterion-utils",
]
examples = [
    "logging-allocator",
    "env_logger",
]
prover = [
    "std", # TODO: Make prove run in no-std wasm.
    "merkle-tree/prover",
]
