[package]
name = "logging-allocator"
version = "0.1.0"
description = ""
repository = "https://github.com/0xProject/starkcrypto/tree/master/utils/logging-allocator"
keywords = []
categories = []
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
license-file = "../../License.md"
edition = "2018"

[dependencies]
log = { version = "0.4.8", default_features = false }

[features]
default = [ "std", "enable" ]
std = [
    "log/std",
]
enable = []
