[package]
name = "macros-decl"
version = "0.1.0"
description = ""
repository = "https://github.com/0xProject/starkcrypto/tree/master/utils/macros-decl"
keywords = []
categories = []
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
license-file = "../../License.md"
edition = "2018"

[dependencies]
macros-impl = { path = "../macros-impl" }

proc-macro-hack = "0.5"

[features]
default = ["std"]
std = []
