[package]
name = "macros-lib"
version = "0.1.0"
description = "Library of procedural macros implemented using `proc_macro2`"
repository = "https://github.com/0xProject/starkcrypto/tree/master/utils/macros-lib"
keywords = ["macros", "rust-patterns"]
categories = ["rust-patterns"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
hex = "0.4.0"

[features]
default = ["std"]
std = []
