[package]
name = "zkp-mmap-vec"
version = "0.2.0"
description = "Replacement for `Vec` that uses file-backed storage"
repository = "https://github.com/0xProject/starkcrypto/tree/master/utils/mmap-vec"
keywords = ["mmap", "no-std"]
categories = ["algorithms", "rust-patterns", "memory-management", "no-std"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
no-std-compat = { version = "0.4.0", features = [ "alloc" ] }
log = { version = "0.4.8", default_features = false }
memmap = { version = "^0.7.0", optional = true }

[features]
default = ["std"]
std = [
    "no-std-compat/std",
    "log/std",
    "memmap",
]
