[package]
name = "zkp-primefield-benchmarks"
version = "0.2.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

# This package is separate from the main workspace
[workspace]

[dependencies]

[dev-dependencies]
criterion = "0.3"
zkp-macros-decl = { name = "macros-decl", version = "0.2.0", path = "../../../utils/macros-decl" }
zkp-primefield = { name = "primefield", version = "0.2.0", path = ".." }
zkp-u256 = { name = "u256", version = "0.2.0", path = "../../u256" }
zkp-elliptic-curve-crypto = { name = "ecc", version = "0.2.0", path = "../../../crypto/elliptic-curve-crypto", features = ["unsafe_ecdsa"] }
secp256k1-bindings = { package = "secp256k1", version = "0.12.2" }
secp256k1-native = { package = "libsecp256k1", version = "0.2.2" }
ed25519-dalek = "0.9.1"
curve25519-dalek = { git = "https://github.com/Recmo/curve25519-dalek" }
curve25519-donna = { package = "elliptic", version= "0.5.0" }
matter = { version = "0.1.0", path = "./matter" }
rug = { version = "1.3.0", default-features = false, features = ["integer"] }
# TODO: zcash = { package = "pairing", version = "0.14.2" }
sha2 = "0.8.0"
# HACK: Make Rand compile
# See https://github.com/dalek-cryptography/ed25519-dalek/issues/56
# See https://github.com/rust-random/rand/issues/645
rand = "0.6"

[[bench]]
name = "benchmark"
harness = false

[features]
default = [ "std" ]
std = []

[profile.release]
opt-level = 3
lto = true
panic = 'unwind'
