[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['substrate-node-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-node-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-node-runtime]
default-features = false
path = '..'
